tests/invalid/fp_dup_bug.err_exp3
fp_dup_bug.m:069: Error: [38;5;203mduplicate `:- pragma foreign_proc' declaration[39;49m for
fp_dup_bug.m:069:   this mode of predicate `foo'/2 in C#.
fp_dup_bug.m:063:   The first one was here.
fp_dup_bug.m:075: Error: [38;5;203mduplicate `:- pragma foreign_proc' declaration[39;49m for
fp_dup_bug.m:075:   this mode of predicate `foo'/2 in C#.
fp_dup_bug.m:063:   The first one was here.
